# excode

./: AbstractHighlighter.cpp  AbstractHighlighter.h  CMakeLists.txt  CoolComboBox.qml  Highlighter.cpp  Highlighter.h  HighlighterController.cpp  HighlighterController.h  HighlighterCpp.cpp  HighlighterCpp.h  HighlightingStyleController.cpp  HighlightingStyleController.h  HighlightingStyleModel.cpp  HighlightingStyleModel.h  ImageClipboard.cpp  ImageClipboard.h  LanguageController.cpp  LanguageController.h  LanguageModel.cpp  LanguageModel.h  README.md  main.cpp  main.qml  qml.qrc
config/: config.json  config.xml
